; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_if.c_pfi_attach_ifnet.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_if.c_pfi_attach_ifnet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { %struct.pfi_kif* }
%struct.pfi_kif = type { %struct.ifnet* }

@pf_lock = common dso_local global i32 0, align 4
@LCK_MTX_ASSERT_OWNED = common dso_local global i32 0, align 4
@pfi_update = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"pfi_kif_get failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pfi_attach_ifnet(%struct.ifnet* %0) #0 {
  %2 = alloca %struct.ifnet*, align 8
  %3 = alloca %struct.pfi_kif*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %2, align 8
  %4 = load i32, i32* @pf_lock, align 4
  %5 = load i32, i32* @LCK_MTX_ASSERT_OWNED, align 4
  %6 = call i32 @LCK_MTX_ASSERT(i32 %4, i32 %5)
  %7 = load i32, i32* @pfi_update, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* @pfi_update, align 4
  %9 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %10 = call i32 @if_name(%struct.ifnet* %9)
  %11 = call %struct.pfi_kif* @pfi_kif_get(i32 %10)
  store %struct.pfi_kif* %11, %struct.pfi_kif** %3, align 8
  %12 = icmp eq %struct.pfi_kif* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = call i32 @panic(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  br label %15

15:                                               ; preds = %13, %1
  %16 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %17 = call i32 @ifnet_lock_exclusive(%struct.ifnet* %16)
  %18 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %19 = load %struct.pfi_kif*, %struct.pfi_kif** %3, align 8
  %20 = getelementptr inbounds %struct.pfi_kif, %struct.pfi_kif* %19, i32 0, i32 0
  store %struct.ifnet* %18, %struct.ifnet** %20, align 8
  %21 = load %struct.pfi_kif*, %struct.pfi_kif** %3, align 8
  %22 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %23 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %22, i32 0, i32 0
  store %struct.pfi_kif* %21, %struct.pfi_kif** %23, align 8
  %24 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %25 = call i32 @ifnet_lock_done(%struct.ifnet* %24)
  %26 = load %struct.pfi_kif*, %struct.pfi_kif** %3, align 8
  %27 = call i32 @pfi_kif_update(%struct.pfi_kif* %26)
  ret void
}

declare dso_local i32 @LCK_MTX_ASSERT(i32, i32) #1

declare dso_local %struct.pfi_kif* @pfi_kif_get(i32) #1

declare dso_local i32 @if_name(%struct.ifnet*) #1

declare dso_local i32 @panic(i8*) #1

declare dso_local i32 @ifnet_lock_exclusive(%struct.ifnet*) #1

declare dso_local i32 @ifnet_lock_done(%struct.ifnet*) #1

declare dso_local i32 @pfi_kif_update(%struct.pfi_kif*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
